bg changed to yellow

--- a/SpaceGame/src/SpaceGame/Views/Home/Index.cshtml
+++ b/SpaceGame/src/SpaceGame/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Home Page - Space Game";
 }
-<section class="intro" style="background-color: green; opacity: 0.6;">
+<section class="intro" style="background-color: yellow; opacity: 0.6;">
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
         <p>An example site for demo</p>
