--- a/SpaceGame/src/SpaceGame/Views/Home/Index.cshtml
+++ b/SpaceGame/src/SpaceGame/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     </div>
 </header>
 
-<section style="background: rgb(0,98,255);background: linear-gradient(90deg, rgba(0,98,255,1) 50%, rgba(1,19,49,1) 85%, rgba(1,6,15,1) 100%);">
+<section style="background: rgb(0,98,255);background: linear-gradient(90deg, red 50%, rgba(1,19,49,1) 85%, rgba(1,6,15,1) 100%);">
     <div class="intro">
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
